# Neural-Net-For-The-Win

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Constants.h  Directives.h  Tensor.h  Tensor2D.h  Utility.h
src/: Tensor.cpp  Tensor.h  Tensor2D.cpp  Utility.cpp
test/: t_Tensor.cpp  t_Tensor2D.cpp
